<resources>
    <string name="app_name">mobile_app</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="nic">NIC</string>
    <string name="password">Password</string>
    <string name="regidstration_link">Not yet registered? SignUp Now</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile</string>
    <string name="login_link">Already Registered? SignIn Now</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="critiria_text">Enter Search Critiria</string>
    <string name="starting_station">Starting Station</string>
    <string name="ending_station">Ending Station</string>
    <string name="noof_passengers">No of Passengers</string>
    <string name="date">Date</string>
    <string name="search_text">Search</string>
    <string name="reset_text">Reset</string>
    <string name="enter_passengers">Enter Number of Passengers</string>
    <string name="btn_ticket_book">Book Ticket</string>
    <string name="l_train_name">Train Name:</string>
    <string name="l_schedule_date">Schedule Date:</string>
    <string name="l_total_price">Total Price:</string>
    <string name="l_reservation">Reservations:</string>
    <string name="available_schedules">Available Schedules</string>
    <string name="schedule_details">Schedule Details</string>
    <string name="user_profile">User Profile</string>
    <string name="reservation_history">Reservation History</string>
    <string name="reservation_details">Reservation Details</string>
    <string name="update">Update</string>
    <string name="deactivate">Deactivate Account</string>
    <string name="activate">Activate Account</string>
    <string name="reservation_cancel">Cancel Reservation</string>
    <string name="reservation_update">Update</string>
    <string name="no_of_reservations">No of Reservations</string>
    <string name="person_price">Per person Price</string>


</resources>