<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_background">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/critiria_text"
        android:id="@+id/critiria_text"
        android:textSize="30sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/primary"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/ed_search_start_station"
        android:background="@drawable/custom_edittext"
        android:drawableLeft="@drawable/ic_baseline_person_24"
        android:drawablePadding="8dp"
        android:hint="@string/starting_station"
        android:padding="8dp"
        android:textColor="@color/black"
        android:textColorHighlight="@color/secondary"
        android:layout_marginTop="40dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/ed_search_end_station"
        android:background="@drawable/custom_edittext"
        android:drawableLeft="@drawable/ic_baseline_person_24"
        android:drawablePadding="8dp"
        android:hint="@string/ending_station"
        android:padding="8dp"
        android:textColor="@color/black"
        android:textColorHighlight="@color/secondary"
        android:layout_marginTop="20dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/ed_search_passengers"
        android:background="@drawable/custom_edittext"
        android:drawableLeft="@drawable/ic_baseline_person_24"
        android:drawablePadding="8dp"
        android:hint="@string/noof_passengers"
        android:padding="8dp"
        android:textColor="@color/black"
        android:textColorHighlight="@color/secondary"
        android:layout_marginTop="20dp"
        android:inputType="number"
        android:defaultValue="1"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/ed_search_date"
        android:background="@drawable/custom_edittext"
        android:drawableLeft="@drawable/ic_baseline_person_24"
        android:drawablePadding="8dp"
        android:hint="@string/date"
        android:padding="8dp"
        android:textColor="@color/black"
        android:textColorHighlight="@color/secondary"
        android:layout_marginTop="20dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:id="@+id/search_btn"
            android:text="@string/search_text"
            android:textSize="18sp"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/primary"
            app:cornerRadius="20dp"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:id="@+id/reset_btn"
            android:text="@string/reset_text"
            android:textSize="18sp"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/secondary"
            android:onClick="onNavigateToHome"
            app:cornerRadius="20dp"
            android:layout_marginStart="20dp"
            />
    </LinearLayout>


</LinearLayout>