<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".RegisterActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        android:background="@drawable/custom_edittext">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:id="@+id/register_text"
                android:textSize="36sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/primary"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/ed_firstname"
                android:background="@drawable/custom_edittext"
                android:drawableLeft="@drawable/ic_baseline_person_24"
                android:drawablePadding="8dp"
                android:hint="@string/first_name"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/secondary"
                android:layout_marginTop="40dp"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/ed_last_name"
                android:background="@drawable/custom_edittext"
                android:drawableLeft="@drawable/ic_baseline_lock_24"
                android:drawablePadding="8dp"
                android:hint="@string/last_name"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/secondary"
                android:layout_marginTop="20dp"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/ed_email"
                android:background="@drawable/custom_edittext"
                android:drawableLeft="@drawable/ic_baseline_lock_24"
                android:drawablePadding="8dp"
                android:hint="@string/email"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/secondary"
                android:layout_marginTop="20dp"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/ed_mobile"
                android:background="@drawable/custom_edittext"
                android:drawableLeft="@drawable/ic_baseline_lock_24"
                android:drawablePadding="8dp"
                android:hint="@string/mobile"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/secondary"
                android:layout_marginTop="20dp"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/ed_nic"
                android:background="@drawable/custom_edittext"
                android:drawableLeft="@drawable/ic_baseline_lock_24"
                android:drawablePadding="8dp"
                android:hint="@string/nic"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/secondary"
                android:layout_marginTop="20dp"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/ed_password"
                android:background="@drawable/custom_edittext"
                android:drawableLeft="@drawable/ic_baseline_lock_24"
                android:drawablePadding="8dp"
                android:hint="@string/password"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/secondary"
                android:layout_marginTop="20dp"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/register_btn"
                android:text="@string/register"
                android:textSize="18sp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/primary"
                app:cornerRadius="20dp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/login_link"
        android:textSize="14sp"
        android:textAlignment="center"
        android:id="@+id/signupText"
        android:textColor="@color/primary"
        android:onClick="onNavigateToLogin"
        android:layout_marginBottom="20dp"/>
</LinearLayout>