<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".ProfileFragement">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        android:background="@drawable/custom_edittext">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/p_ed_firstname"
                android:background="@drawable/custom_edittext"
                android:drawableLeft="@drawable/ic_baseline_person_24"
                android:drawablePadding="8dp"
                android:hint="@string/first_name"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/secondary"
                android:layout_marginTop="40dp"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/p_ed_lastname"
                android:background="@drawable/custom_edittext"
                android:drawableLeft="@drawable/ic_baseline_person_24"
                android:drawablePadding="8dp"
                android:hint="@string/last_name"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/secondary"
                android:layout_marginTop="20dp"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/p_ed_mobile"
                android:background="@drawable/custom_edittext"
                android:drawableLeft="@drawable/ic_baseline_person_24"
                android:drawablePadding="8dp"
                android:hint="@string/mobile"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/secondary"
                android:layout_marginTop="20dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/p_label_nic"
                android:text="@string/nic"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_below="@+id/p_ed_lastname"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/p_nic"
                android:text="3"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginStart="10dp"
                android:layout_below="@+id/p_ed_lastname"
                android:layout_toEndOf="@id/p_label_nic"
                android:layout_marginTop="15dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/p_label_email"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_below="@+id/p_label_nic"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/p_email"
                android:text="3"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginStart="10dp"
                android:layout_below="@+id/p_label_nic"
                android:layout_toEndOf="@id/p_label_email"
                android:layout_marginTop="8dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/p_update_btn"
                android:text="@string/update"
                android:textSize="18sp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/primary"
                app:cornerRadius="20dp"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/p_deactivate_btn"
                android:text="@string/deactivate"
                android:textSize="18sp"
                android:layout_marginTop="15dp"
                android:backgroundTint="@color/primary"
                app:cornerRadius="20dp"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/p_activate_btn"
                android:text="@string/activate"
                android:textSize="18sp"
                android:layout_marginTop="15dp"
                android:backgroundTint="@color/primary"
                app:cornerRadius="20dp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</FrameLayout>